--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,7 +1,25 @@
 <h1><%= pluralize(@movies.size, 'Movie') %></h1>
 
-<ul>
 <% @movies.each do |movie| %>
-  <li><%= movie %></li>
+	<article>
+  	<header><h2><%= movie.title %></h2></header> 
+  	<p><%= truncate(movie.description, length: 40, separator: ' ') %>
+  	</p>
+  	<table>
+  		<tr>
+  			<th>Released:</th>
+  			<td><%= movie.released_on %>
+  				  <%= format_release_date(movie) %>   				  
+  			</td>
+  		</tr>
+  		<tr>
+  			<th>Rating:</th>
+  			<td><%= movie.rating %></td>
+  		</tr>
+  		<tr>
+  			<th>Total Gross:</th>
+  			<td><%= format_gross(movie) %></td>
+  		</tr>
+  	</table>
+	</article>
 <% end %>
-</ul>
