--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,15 +2,16 @@
 
 <% @movies.each do |movie| %>
 	<article>
-  	<header><h2><%= movie.title %></h2></header> 
+  	<header>
+  		<h2><%= link_to(movie.title, movie_path(movie)) %></h2>
+  	</header> 
   	<p><%= truncate(movie.description, length: 40, separator: ' ') %>
   	</p>
+
   	<table>
   		<tr>
   			<th>Released:</th>
-  			<td><%= movie.released_on %>
-  				  <%= format_release_date(movie) %>   				  
-  			</td>
+  			<td><%= format_release_date(movie) %></td>
   		</tr>
   		<tr>
   			<th>Rating:</th>
