--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,4 +1,4 @@
-<h1><%= pluralize(@movies.size, 'Movie') %></h1>
+<h1>Listing <%= pluralize(@movies.size, 'Movie') %></h1>
 
 <% @movies.each do |movie| %>
 	<article>
